# zoku

./: .gitignore  LICENSE  README.md  STRATEGY.md  generate_demo_gif.py  generate_social_preview.py  pyproject.toml
.github/workflows/: ci.yml
deja/: __init__.py  __main__.py  cli.py  detector.py  hooks.py  installer.py  recorder.py
harnesskit/: README.md  __init__.py  __main__.py  adapters.py  bootstrap.py  catalog.py  cli.py  config.py  permissions.py  presets.py  security.py
harnesskit/hooks/: __init__.py  enforcer.py  installer.py  post_tool_use.sh  pre_tool_use.sh  session_start.sh
phantom/: __init__.py  __main__.py  cli.py  detector.py  hooks.py  installer.py  recorder.py
tests/: test_deja.py  test_harnesskit.py  test_hooks.py  test_phantom.py  test_zoku.py
zoku/: __init__.py  __main__.py  cli.py  detector.py  hooks.py  installer.py  recorder.py
